classDiagram

class User {
    + id
    + nom
    + email
    + mot_de_passe
    + role
}

class Plan {
    + id
    + titre
    + description
}

class Session {
    + id
    + nom
    + num_session
    + semaine_session
    + objectif_session
    + sujet
    + mini_projet
    + evaluation
    + date_debut
    + date_fin
}

class Formation {
    + id
    + nom
    + description
    + date_debut
    + date_fin
}


User "1" -- "1..*" Plan  
User "1" --  "1..*" Session
Plan "1" --  "1..*" Session
Formation "1" -- "1..*" Session
Formation "1" -- "1..*" Plan



